--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,19 @@
+
 server {
-    listen  80;
+    listen  0.0.0.0:80;
 
     # this path MUST be exactly as docker-compose.fpm.volumes,
     # even if it doesn't exist in this dock.
-    root /var/www/test;
+    root /var/www/html;
 
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files $uri /index.php;
     }
 
     location ~ ^/.+\.php(/|$) {
-        fastcgi_pass fpm:9000;
+        fastcgi_pass php:9000;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
+
